<resources>
    <string name="app_name">BU_Spark</string>
    <string name="edu">Education</string>
    <string name="my_case">My Case</string>
    <string name="law">Law</string>
    <string name="res">Resources</string>
    <string name="title_activity_education_">Education_Activity</string>
    <string name="title_activity_edu_">Edu_Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_law_">Law_Activity</string>
    <string name="title_activity_res_">Res_Activity</string>
    <string name="mental_health">Mental Health</string>
    <string name="legal">Legal</string>
    <string name="housing">Housing</string>
    <string name="food">Food</string>
    <string name="emp">Employment</string>
    <string name="hospital">Hospital</string>
    <string name="ma_statue">Massachusetts Statue</string>
    <string name="ma_case_law">Massachusetts Case Law</string>
    <string name="fed_statue">Federal Statue</string>
    <string name="fed_case_law">Federal Case Law</string>
    <string name="hypos">Hypos</string>
    <string name="stats">Statistics</string>
    <string name="indicators">Indicators</string>
    <string name="mycase_content">Here we will lay out some questions that indicate Labor \n
                                    Trafficking and  when clicked on those questions it will \n
                                    give clear description of the answer to the question, \n
                                    so that you can understand what they are going through.</string>
    <string name="law_content">The content here depends on the appropriate sub section selected \n
                                from the navigation bar at the top left corner. Click on it to know more.</string>
    <string name="edu_content">The content here depends on the appropriate sub section selected \n
                                from the navigation bar at the top left corner. Click on it to know more.</string>
    <string name="res_content">The content here depends on the appropriate sub section selected \n
                                from the navigation bar at the top left corner. Click on it to know more.</string>

</resources>
